[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
tokio = {version = "1.22.0", features = ["full"] }
yahoo-finance = {git = "https://github.com/ac130kz/yahoo-finance-rs.git"}
